Overlay scroll issue on mobile device

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,7 @@ body {
     background-size: 400% 400%;
 	animation: overlay-flow 4s ease infinite;
 	height: 100%;
+    overflow-y: hidden;
 }
 
 @keyframes overlay-flow {
